--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section class="px-2 lg:flex lg:space-x-2">
             <a class="w-full lg:w-2/3 bg-violet-300 h-96 mb-4 relative rounded inline-block overflow-hidden" href="#">
                 <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-black/10 to-black/70"></div>
-                <img class="absolute left-0 top-0 w-full h-full z-0 object-cover" src="/public/images/img-1.jpg"
+                <img class="absolute left-0 top-0 w-full h-full z-0 object-cover" src="./public/images/img-1.jpg"
                     alt="news">
                 <div class="p-4 absolute bottom-0 left-0 z-20">
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
@@ -98,7 +98,7 @@
 
             <a class="w-full lg:w-1/3 bg-indigo-300 h-96 mb-4 relative rounded inline-block overflow-hidden" href="#">
                 <div class="absolute left-0 top-0 w-full h-full z-10 bg-gradient-to-b from-black/10 to-black/70"></div>
-                <img class="absolute left-0 top-0 w-full h-full z-0 object-cover" src="/public/images/img-2.jpg"
+                <img class="absolute left-0 top-0 w-full h-full z-0 object-cover" src="./public/images/img-2.jpg"
                     alt="news">
                 <div class="p-4 absolute bottom-0 left-0 z-20">
                     <h2 class="text-4xl font-semibold text-gray-100 leading-tight">
@@ -126,7 +126,7 @@
                 <!-- post cards -->
                 <section class="px-2">
                     <a class="block w-full lg:flex mb-10" href="#">
-                        <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="/public/images/img-3.jpg"
+                        <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="./public/images/img-3.jpg"
                             alt="img">
                         <div class="flex flex-col justify-between">
                             <div>
@@ -149,7 +149,7 @@
                     </a>
 
                     <a class="block w-full lg:flex mb-10" href="#">
-                        <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="/public/images/img-4.jpg"
+                        <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="./public/images/img-4.jpg"
                             alt="img">
                         <div class="flex flex-col justify-between">
                             <div>
@@ -174,7 +174,7 @@
                     </a>
 
                     <a class="block w-full lg:flex mb-10" href="#">
-                        <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="/public/images/img-5.jpg"
+                        <img class="w-full h-48 lg:w-48 opacity-80 object-cover lg:mr-4" src="./public/images/img-5.jpg"
                             alt="img">
                         <div class="flex flex-col justify-between">
                             <div>
